--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>Portfolio de Aaishah — Arrive bientôt</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="index.css">
+</head>
+<body>
+  <div class="container">
+    <h1>Mon portfolio arrive bientôt</h1>
+    <p>Je travaille activement dessus — restez connecté·e !</p>
+    <p class="email">Contact : <a href="mailto:aaishah@example.com">aaishah@example.com</a></p>
+  </div>
+</body>
+</html>
