style() : change style pending page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <h1>Mon portfolio arrive bientôt</h1>
     <p>Je travaille activement dessus — restez connecté·e !</p>
-    <p class="email">Contact : <a href="mailto:aaishah@example.com">aaishah@example.com</a></p>
+    <p class="email">Contact : <a href="mailto:aaishah@example.com">aaishah.hulkhoree@etu.u-paris.fr</a></p>
   </div>
 </body>
 </html>
