--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio de Aaishah — Arrive bientôt</title>
+  <title>Portfolio de Aaishah — En maintenance</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <div class="container">
-    <h1>Mon portfolio arrive bientôt</h1>
-    <p>Je travaille activement dessus — restez connecté·e !</p>
+    <h1>Mon portfolio est actuellement en maintenance</h1>
+    <p>Je travaille à l’ajout de nouveaux projets — revenez très bientôt !</p>
     <p class="email">Contact : <a href="mailto:aaishah@example.com">aaishah.hulkhoree@etu.u-paris.fr</a></p>
   </div>
 </body>
