style() : adapt html form css

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>Mon portfolio est actuellement en maintenance</h1>
-    <p>Je travaille à l’ajout de nouveaux projets — revenez très bientôt !</p>
-    <p class="email">Contact : <a href="mailto:aaishah@example.com">aaishah.hulkhoree@etu.u-paris.fr</a></p>
+    <h1>Site en maintenance</h1>
+    <p>Merci de votre visite ! Je travaille actuellement sur de nouveaux projets pour améliorer mon portfolio.</p>
+    <p>Revenez très bientôt pour découvrir les nouveautés !</p>
+    <p class="email">Pour me contacter : <a href="mailto:aaishah.hulkhoree@etu.u-paris.fr">aaishah.hulkhoree@etu.u-paris.fr</a></p>
   </div>
 </body>
 </html>
